--- a/appspec.yml
+++ b/appspec.yml
@@ -1,22 +1,23 @@
 version: 0.0
 os: linux
+
 files:
-   - source: /
-     destination: /var/www/html
-permissions:
-   - object: /var/www/html
-     pattern: "**"
-     owner: apache
-     group: apache
-     mode: 755
-     type:
-       - file
+  - source: ./
+    destination: /var/www/html
+    overwrite: yes
+
 hooks:
-   BeforeInstall:
-    - location: scripts/installapache.sh
+  BeforeInstall:
+    - location: scripts/stop_apache.sh
       runas: root
-    - location: scripts/startapache.sh
+  ApplicationStart:
+    - location: scripts/changepermission.sh
+      timeout: 3600
+  AfterInstall:
+    - location: scripts/start_apache.sh
+      timeout: 180
       runas: root
-   AfterInstall:
-    - location: scripts/restartapache.sh
+  ValidateService:
+    - location: scripts/status_apache.sh
+      timeout: 3600
       runas: root
