--- a/appspec.yml
+++ b/appspec.yml
@@ -8,12 +8,12 @@ files:
 
 hooks:
   BeforeInstall:
-    - location: scripts/stop_apache.sh
-      location: scripts/codedeploy_agentinstall
+    - location: scripts/stop_apache.sh && scripts/codedeploy_agentinstall.sh
       runas: root
   ApplicationStart:
     - location: scripts/changepermission.sh
       timeout: 3600
+      runas: root
   AfterInstall:
     - location: scripts/start_apache.sh
       timeout: 180
