--- a/appspec.yml
+++ b/appspec.yml
@@ -8,7 +8,7 @@ files:
 
 hooks:
   BeforeInstall:
-    - location: scripts/stop_apache.sh, scripts/codedeploy_agentinstall.sh
+    - location: scripts/stop_apache.sh
       runas: root
   ApplicationStart:
     - location: scripts/changepermission.sh
